# JMComic-Crawler-Python

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release.py  requirements-dev.txt  setup.py
.github/: CONTRIBUTING.md  release.py  release.yml
.github/ISSUE_TEMPLATE/: ask-for-help.yml  bug.yml  config.yml  feature-request.yml
.github/workflows/: action_run_tests.yml  action_workflow.yml  action_workflow_local.yml  auto_release.yml  close_specific_pr.yml  download.yml  download_dispatch.yml  export_favorites.yml  publish_pypi.yml  release.yml  release_auto.yml  test.yml  test_api.yml  test_html.yml
assets/config/: option.yml  option_github_actions.yml  option_plugin.yml  option_test.yml  option_test_api.yml  option_test_html.yml  option_use_proxy.yml  option_workflow_download.yml  option_workflow_test.yml  workflow_option.yml  常用配置介绍.yml  禁漫域名配置示例.yml
assets/docs/: TODO.md  filters.py  mkdocs.yml  requirements.txt  开发规范.md  教程：使用GitHub Actions下载禁漫本子.md  教程：使用Github Actions下载禁漫本子.md
assets/option/: option_test_api.yml  option_test_downloader.yml  option_test_exception.yml  option_test_html.yml  (+3 more)
usage/: getting_started.py  jmcomic_getting_started.py  jmcomic_github_actions.py  jmcomic_usage.py  jmcomic_workflow_download.py  jmcomic_workflows.py  pick_domain.py  sample_usage.py  usage_advanced.py  usage_cl.py  usage_configure_client_impl.py  usage_custom.py  usage_feature_filter.py  usage_feature_plugin.py  usage_plugin.py  usage_plugin_getting_started.py  usage_simple.py  workflow_download.py  workflow_export_favorites.py
(+66 files in other folders)
